    formatting characters.
  * Remove unnecessary assignment in rfc822db_question_set.
  * Fix pointer arithmetic bug in plugin_iterate that meant that only one
    plugin would ever be returned by CAPB (and probably also caused a minor
    buffer overflow, although not exploitable in the context of d-i).
  * Mark parent halves of confmodule communication pipes close-on-exec.

 -- Colin Watson <cjwatson@debian.org>  Mon, 19 Jan 2009 22:54:08 +0000

cdebconf (0.138) unstable; urgency=low

  [ Jérémy Bobbio ]
  * Do not drop translations that are defined as fall-back languages for the
    currently selected language. Closes: #502240, #502244.

 -- Frans Pop <fjp@debian.org>  Mon, 01 Dec 2008 06:41:23 +0100

cdebconf (0.137) unstable; urgency=low

  * Fix build system to changes in cairo-directfb packaging:
    - Build-Depends on libcairo2-dev (>= 1.6.4-6.1),
    - Remove specific dh_shlibdeps handling of cdebconf-gtk-udeb.

 -- Jérémy Bobbio <lunar@debian.org>  Tue, 14 Oct 2008 01:59:53 +0200

cdebconf (0.136) unstable; urgency=low

  [ Updated translations ]
  * Bosnian (bs.po) by Armin Besirovic
  * Danish (da.po)
  * Latvian (lv.po) by Peteris Krisjanis
  * Macedonian (mk.po) by Arangel Angov
  * Serbian (sr.po) by Veselin Mijušković

 -- Otavio Salvador <otavio@debian.org>  Sun, 21 Sep 2008 18:42:18 -0300

cdebconf (0.135) unstable; urgency=low

  [ Jérémy Bobbio ]
  * In GTK+ frontend, do not run a specific handler when the main window is
    closed on normal shutdown.
  * In GTK+ frontend, fix propagation of errors in question handlers.
  * In GTK+ frontend, return an error when the number of options in Choices and
    Choices-C mismatch instead of triggering an assertion failure.
  * In {text,newt}_go(), exit the loop when an error happens in a question
    handler. Closes: #498846.

  [ Updated translations ]
  * Croatian (hr.po) by Josip Rodin
  * Indonesian (id.po) by Arief S Fitrianto

 -- Jérémy Bobbio <lunar@debian.org>  Sun, 14 Sep 2008 19:43:59 +0000
